# photobooth_flutter

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
config/: app_settings.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/config/: app_router.dart
lib/core/constants/: app_constants.dart  error_codes.dart
lib/core/controller/: app_controller.dart
lib/core/exceptions/: app_exception.dart
lib/core/logger/: app_logger_service.dart
lib/core/models/: app_settings.dart  camera_models.dart  diagnostic_models.dart
lib/core/repositories/: camera_repository.dart  diagnostic_repository.dart  settings_repository.dart
lib/core/services/: camera_service.dart  diagnostic_service.dart  settings_service.dart  system_service.dart
lib/core/theme/: app_theme.dart
lib/features/camera/data/: camera_local_data_source.dart
lib/features/camera/domain/: camera_contract.dart
lib/features/camera/presentation/: live_view_page.dart
lib/features/dashboard/domain/: dashboard_summary.dart
lib/native/windows/: camera_ffi.dart  windows_camera_bridge.dart
lib/widgets/: app_shell.dart  app_widgets.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/camera_engine/: CMakeLists.txt  camera_engine.cpp  camera_engine.h
windows/runner/: Runner.rc  main.cpp
(+9 files in other folders)
